--- a/index.html
+++ b/index.html
@@ -210,6 +210,22 @@
                             <img src="images/matchday.png" alt="matchday graphic">
                         </div>
 
+                        <div class="timeline-item">
+                        <h3>Events Website</h3>
+                        <div class="company">Web Development Project</div>
+                        <div class="date">Academic Year 24/25</div>
+                        <p>During my time completing my Internet Applications module, I worked on a project which involved creating a website for the promotion of events such as parties and weddings. 
+                            This included designing the user interface, implementing responsive design principles, and ensuring a smooth user experience. I utilized HTML, CSS, and JavaScript to bring
+                             the website to life. The second part of the project involved converting the website into razor pages and utilising C# to provide admin features. This project was one I particularly
+                            enjoyed as it allowed me to combine my technical skills with my creativity.</p>
+
+                        <div class="projectpic">
+                            <img src="images/website1.png" alt="index">
+                            <img src="images/website3.png" alt="parties">
+                            <img src="images/website2.png" alt="contact">
+                            <img src="images/website4.png" alt="events">
+                        </div>
+
                 </section>
 
                 <!-- Contact Section -->
