--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Professional Portfolio</title>
+    <title>Rishi Vaidya - Professional Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -194,6 +194,7 @@
 
                     </div>
 
+
                     <div class="timeline-item">
                         <h3>NTU Table Tennis Social Media Content</h3>
                         <div class="company">Club Secretary/Social Media Manager</div>
@@ -209,8 +210,10 @@
                             <img src="images/training.png" alt=" training schedule">
                             <img src="images/matchday.png" alt="matchday graphic">
                         </div>
+                        
+                    </div>
 
-                        <div class="timeline-item">
+                    <div class="timeline-item">
                         <h3>Events Website</h3>
                         <div class="company">Web Development Project</div>
                         <div class="date">Academic Year 24/25</div>
@@ -225,7 +228,8 @@
                             <img src="images/website2.png" alt="contact">
                             <img src="images/website4.png" alt="events">
                         </div>
-
+                    </div>
+                    
                 </section>
 
                 <!-- Contact Section -->
