--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rishi Vaidya - Professional Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="container">
@@ -14,21 +14,21 @@
                 <div class="header-flex">
                     <div class="left-header">
                         <div class="profilepic">
-                            <img src="images/me.png" alt="profile pic">
+                            <img src="./images/me.png" alt="profile pic">
                         </div>
                         <h1>Rishi Vaidya</h1>
                         <p class="title">First Class BSc Computer Science Graduate</p>
                     </div>
                     <div class="right-header-overlay">
-                    <div class="right-header">
-                        <p class="summary"> 
-                            Computer Science graduate with First Class Honours. Proven experience in software development, 
-                            data analysis, and user-centered design, delivering innovative solutions that drive efficiency 
-                            and engagement. Eager to apply technical expertise and creative problem-solving to help businesses 
-                            unlock growth and competitive advantage through technology. Involved in the growth of satisfaction 
-                            through UX by 10% & engagement by over 1000% respectively.
-                        </p>
-                    </div>
+                        <div class="right-header">
+                            <p class="summary"> 
+                                Computer Science graduate with First Class Honours. Proven experience in software development, 
+                                data analysis, and user-centered design, delivering innovative solutions that drive efficiency 
+                                and engagement. Eager to apply technical expertise and creative problem-solving to help businesses 
+                                unlock growth and competitive advantage through technology. Involved in the growth of satisfaction 
+                                through UX by 10% & engagement by over 1000% respectively.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </header>
@@ -79,7 +79,6 @@
                 <!-- Education Section -->
                 <section id="education" class="section">
                     <h2>Education, Skills & Expertise</h2>
-                    
                     <div class="timeline-item">
                         <h3>First Class Honours BSc Computer Science</h3>
                         <div class="company">Nottingham Trent University</div>
@@ -96,65 +95,34 @@
                         <div class="skill-category">
                             <h3>Technical Skills</h3>
                             <div class="skill-item">
-                                <div class="skill-name">
-                                    <span>Web Development</span>
-                                    <span>90%</span>
-                                </div>
-                                <div class="skill-bar">
-                                    <div class="skill-progress" style="width: 90%"></div>
-                                </div>
+                                <div class="skill-name"><span>Web Development</span><span data-width="90%">0%</span></div>
+                                <div class="skill-bar"><div class="skill-progress"></div></div>
                             </div>
                             <div class="skill-item">
-                                <div class="skill-name">
-                                    <span>UI/UX Design</span>
-                                    <span>95%</span>
-                                </div>
-                                <div class="skill-bar">
-                                    <div class="skill-progress" style="width: 95%"></div>
-                                </div>
+                                <div class="skill-name"><span>UI/UX Design</span><span data-width="95%">0%</span></div>
+                                <div class="skill-bar"><div class="skill-progress"></div></div>
                             </div>
                             <div class="skill-item">
-                                <div class="skill-name">
-                                    <span>Programming Languages</span>
-                                    <span>85%</span>
-                                </div>
-                                <div class="skill-bar">
-                                    <div class="skill-progress" style="width: 85%"></div>
-                                </div>
+                                <div class="skill-name"><span>Programming Languages</span><span data-width="85%">0%</span></div>
+                                <div class="skill-bar"><div class="skill-progress"></div></div>
                             </div>
                         </div>
 
                         <div class="skill-category">
                             <h3>Professional Skills</h3>
                             <div class="skill-item">
-                                <div class="skill-name">
-                                    <span>Project Management</span>
-                                    <span>85%</span>
-                                </div>
-                                <div class="skill-bar">
-                                    <div class="skill-progress" style="width: 85%"></div>
-                                </div>
+                                <div class="skill-name"><span>Project Management</span><span data-width="85%">0%</span></div>
+                                <div class="skill-bar"><div class="skill-progress"></div></div>
                             </div>
                             <div class="skill-item">
-                                <div class="skill-name">
-                                    <span>Team Leadership</span>
-                                    <span>95%</span>
-                                </div>
-                                <div class="skill-bar">
-                                    <div class="skill-progress" style="width: 95%"></div>
-                                </div>
+                                <div class="skill-name"><span>Team Leadership</span><span data-width="95%">0%</span></div>
+                                <div class="skill-bar"><div class="skill-progress"></div></div>
                             </div>
                             <div class="skill-item">
-                                <div class="skill-name">
-                                    <span>Communication</span>
-                                    <span>95%</span>
-                                </div>
-                                <div class="skill-bar">
-                                    <div class="skill-progress" style="width: 95%"></div>
-                                </div>
+                                <div class="skill-name"><span>Communication</span><span data-width="95%">0%</span></div>
+                                <div class="skill-bar"><div class="skill-progress"></div></div>
                             </div>
                         </div>
-                        
                     </div>
                     <div class="note">
                         <p><br>*All technical and professional skills are validated through structured feedback & independent peer assessment </p>
@@ -178,19 +146,19 @@
 
                         <div class="projectpic">
                             <figure>
-                                <img src="images/tracking.png" alt="system demo">
+                                <img src="./images/tracking.png" alt="system demo">
                                 <figcaption>Figure 1: System demo in action recorded through slo-mo camera</figcaption>
                             </figure>
                             <figure>
-                                <img src="images/mask.png" alt="mask for tracking">
+                                <img src="./images/mask.png" alt="mask for tracking">
                                 <figcaption>Figure 2: Layered Mask applied for easier ball detection due to lighting conditions</figcaption>
                             </figure>
                             <figure>
-                                <img src="images/heatmap3d.png" alt="3d heatmap">
+                                <img src="./images/heatmap3d.png" alt="3d heatmap">
                                 <figcaption>Figure 3: 3D heatmap visualisation of bounce points</figcaption>
                             </figure>
                             <figure>
-                                <img src="images/heatmap2d.png" alt="2d heatmap">
+                                <img src="./images/heatmap2d.png" alt="2d heatmap">
                                 <figcaption>Figure 4: 2D heatmap visualisation with adjusted angle of birds eye view</figcaption>
                             </figure>
                         </div>
@@ -210,11 +178,11 @@
 
                         <div class="projectpic">
                             <figure>
-                                <img src="images/individuals2024.png" alt="bucs">
+                                <img src="./images/individuals2024.png" alt="bucs">
                                 <figcaption>Figure 5: Promotional post with essential information and brand recognisable viuals </figcaption>
                             </figure>
                             <figure>
-                                <img src="images/results.png" alt="results post">
+                                <img src="./images/results.png" alt="results post">
                                 <figcaption>Figure 6: New & Improved results graphic for easier comprehension</figcaption>
                             </figure>
                             <figure>
@@ -222,7 +190,7 @@
                                 <figcaption>Figure 7: Weekly training schedule post with clear layout for new members</figcaption>
                             </figure>
                             <figure>
-                                <img src="images/matchday.png" alt="matchday graphic">
+                                <img src="./images/matchday.png" alt="matchday graphic">
                                 <figcaption>Figure 8: Eye-Catching Matchday graphic tested to provide most engagement</figcaption>
                             </figure>
                         </div>
@@ -242,19 +210,19 @@
 
                         <div class="projectpic">
                             <figure>
-                                <img src="images/website1.png" alt="index">
+                                <img src="./images/website1.png" alt="index">
                                 <figcaption>Figure 9: Homepage of events website creating luxury feel</figcaption>
                             </figure>
                             <figure>
-                                <img src="images/website3.png" alt="parties">
+                                <img src="./images/website3.png" alt="parties">
                                 <figcaption>Figure 10: Party events listing page with interactive elements</figcaption>
                             </figure>
                             <figure>
-                                <img src="images/website2.png" alt="contact">
+                                <img src="./images/website2.png" alt="contact">
                                 <figcaption>Figure 11: Fully functioning contact page for inquiries with light mode functionality</figcaption>
                             </figure>
                             <figure>
-                                <img src="images/website4.png" alt="events">
+                                <img src="./images/website4.png" alt="events">
                                 <figcaption>Figure 12: All events overview page with clear categorization</figcaption>
                             </figure>
                         </div>
@@ -288,30 +256,32 @@
         </div>
     </div>
 
-    <script>
-        // Smooth scrolling for navigation links
+     <script>
+        // Smooth scrolling
         document.querySelectorAll('.nav a').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
+            anchor.addEventListener('click', function(e) {
                 e.preventDefault();
                 const target = document.querySelector(this.getAttribute('href'));
-                target.scrollIntoView({
-                    behavior: 'smooth',
-                    block: 'start'
-                });
+                target.scrollIntoView({ behavior: 'smooth', block: 'start' });
             });
         });
 
-        // Animate skill bars on scroll
+        // Animate skill bars
         const skillBars = document.querySelectorAll('.skill-progress');
-        const observer = new IntersectionObserver((entries) => {
+        const skillLabels = document.querySelectorAll('.skill-name span[data-width]');
+        const observer = new IntersectionObserver(entries => {
             entries.forEach(entry => {
                 if (entry.isIntersecting) {
-                    entry.target.style.width = entry.target.style.width || '0%';
+                    const bar = entry.target.querySelector('.skill-progress');
+                    const label = entry.target.querySelector('.skill-name span[data-width]');
+                    const width = label.getAttribute('data-width');
+                    bar.style.width = width;
+                    label.textContent = width;
                 }
             });
-        });
+        }, { threshold: 0.5 });
 
-        skillBars.forEach(bar => observer.observe(bar));
+        document.querySelectorAll('.skill-category').forEach(cat => observer.observe(cat));
     </script>
 </body>
 </html>
