--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                         </div>
                         <div class="contact-item">
                             <h3>LinkedIn</h3>
-                            <p><a href="https://www.linkedin.com/in/rishi-vaidya-2aa58b1a5" target="_blank">linkedin.com/in/rishi-vaidya-2aa58b1a5</a></p>
+                            <p><a href="https://www.linkedin.com/in/rishi-vaidya16" target="_blank">linkedin.com/in/rishi-vaidya16</a></p>
                         </div>
                         <div class="contact-item">
                             <h3>Location</h3>
