--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                         <div class="company">Web Development Project</div>
                         <div class="date">Academic Year 24/25</div>
                         <ul>
-                            <li><strong>Problem:</strong> Event organizers face challenges promoting events via accessible, scalable platforms.</li>
+                            <li><strong>Problem:</strong> Event organisers face challenges promoting events via accessible, scalable platforms.</li>
                             <li><strong>Value Add:</strong> Merged technical precision with usability to create a responsive solution.</li>
                             <li><strong>Solution:</strong> Built an events website using HTML, CSS, and JavaScript, later extended with Razor Pages and C# for admin features.</li>
                             <li><strong>Results:</strong> Delivered a polished platform that streamlined event promotion while showcasing both technical and design skills.</li>
